--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ button { background: #3b82f6; color: white; border: none; }
 </head>
 <body>
 
-<h2>Gửi Tiêu đề + Nội dung Embed</h2>
+<h2>Gửi Tiêu đề + Nội dung </h2>
 
 <input id="title" placeholder="Tiêu đề (text thường)">
 <textarea id="content" rows="6" placeholder="Nội dung (embed)"></textarea>
@@ -19,7 +19,7 @@ button { background: #3b82f6; color: white; border: none; }
 
 <script>
 function send() {
-  const webhook = "https://discord.com/api/webhooks/1432731208969621596/4BS7RS1XF6Mq8AhdhPEy2fRgVj30nLASmw5Uv0TzXIuHdhc16ldQsndx01L3XJV0HlWD";
+  const webhook = "https://discord.com/api/webhooks/1461012827056640131/NGDR-brRZcC3NsmETJvztIuHnMN69XwoxK3NTukCrtRZT0b9S3p1vpIe33CC3bOoWIgr";
 
   const title = document.getElementById("title").value;
   const content = document.getElementById("content").value;
