--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@ a.joinlink { color:#00bfff; text-decoration:none; font-weight:bold; }
 
 <script>
 // -------------------- DATA --------------------
-
-// Brainrot: [name, base money, chance, icon]
 const brainrots = [
 ["Graipuss Medussi", 1_000_000, 0.08, "😺"],
 ["Perrito Burrito", 1_000_000, 0.08, "🌯"],
@@ -49,7 +47,6 @@ const brainrots = [
 ["Noo my Candy", 5_000_000, 0.08, "🍬"],
 ["Los Noo My Hotspotitos", 5_500_000, 0.08, "🔥"],
 ["La Grande Combinasion", 10_000_000, 0.08, "🥙"],
-
 ["Nuclearo Dinossauro", 15_000_000, 0.02, "🦖"],
 ["Chicleteira Noelteira", 15_000_000, 0.02, "🍭"],
 ["Los Combinasionas", 15_000_000, 0.02, "🥙"],
@@ -69,20 +66,16 @@ const brainrots = [
 ["Burguro and Fryuro", 150_000_000, 0.02, "🍔"],
 ["Capitano Moby", 160_000_000, 0.02, "🐋"],
 ["Headless Horseman", 175_000_000, 0.02, "🎃"],
-
 ["Dragon Cannelloni", 250_000_000, 0.01, "🐉"],
 ["Dragon Gingerini", 300_000_000, 0.01, "🐲"],
-
 ["Meow OG", 450_000_000, 0.001, "🐱"],
 ["Strawberry Elephant OG", 550_000_000, 0.001, "🐘"],
-
 ["Mariachi Corazoni", 12_500_000, 0.05, "🎺"],
 ["Los Chicleteira", 7_000_000, 0.05, "🍬"],
 ["Lavadorito Spinto", 45_000_000, 0.05, "💦"],
 ["Fragama and Chocrama", 100_000_000, 0.05, "🍫"]
 ];
 
-// Mutations: [name, multiplier, icon]
 const mutations = [
 ["Default", 1, "⚪"], ["Gold",1.25,"🥇"], ["Diamond",1.5,"💎"],
 ["Bloodrot",2,"🩸"], ["Candy",4,"🍬"], ["Lava",6,"🌋"],
@@ -90,7 +83,6 @@ const mutations = [
 ["Cursed",9,"☠️"], ["Rainbow",10,"🌈"]
 ];
 
-// Traits: [name, multiplier, icon]
 const traits = [
 ["Strawberry", 8, "🍓"], ["Meowl",7,"😼"], ["Fireworks",6,"🎆"], ["Nyan",6,"🌈"],
 ["Fire",6,"🔥"], ["Mygame43",6,"🎮"], ["Reindeer",6,"🦌"], ["Paint",6,"🎨"],
@@ -102,17 +94,23 @@ const traits = [
 
 // -------------------- FUNCTIONS --------------------
 function weightedPick(data){ return data[Math.floor(Math.random()*data.length)]; }
-
 function formatMoney(value){
-  if(value>=1_000_000_000){ return (value/1_000_000_000).toFixed(2).replace(/\.00$/,'')+"b/s"; }
-  if(value>=1_000_000){ return (value/1_000_000).toFixed(2).replace(/\.00$/,'')+"m/s"; }
-  if(value>=1_000){ return (value/1_000).toFixed(2).replace(/\.00$/,'')+"k/s"; }
+  if(value>=1_000_000_000) return (value/1_000_000_000).toFixed(2).replace(/\.00$/,'')+"b/s";
+  if(value>=1_000_000) return (value/1_000_000).toFixed(2).replace(/\.00$/,'')+"m/s";
+  if(value>=1_000) return (value/1_000).toFixed(2).replace(/\.00$/,'')+"k/s";
   return value+"/s";
 }
-
 function getTimeNow(){
   const d = new Date();
   return `${d.getDate().toString().padStart(2,'0')}/${(d.getMonth()+1).toString().padStart(2,'0')}/${d.getFullYear()} ${d.getHours().toString().padStart(2,'0')}:${d.getMinutes().toString().padStart(2,'0')}`;
+}
+function calculateMoney(base, mutation, trait){
+  const hasMutation = mutation[1] !== 1;
+  const hasTrait = trait[1] !== 1;
+  if(hasMutation && hasTrait) return (base * mutation[1]) + (base * trait[1]);
+  if(hasMutation) return base * mutation[1];
+  if(hasTrait) return base * trait[1];
+  return base;
 }
 
 // -------------------- BOT LOGIC --------------------
@@ -127,31 +125,32 @@ const logDiv = document.getElementById("log");
 const timerDiv = document.getElementById("timer");
 
 function sendBrainrot(){
-  if(!webhookInput.value) { alert("Enter webhook URL"); return; }
-
+  if(!webhookInput.value){ alert("Enter webhook URL"); return; }
   const b = weightedPick(brainrots);
   const m = weightedPick(mutations);
   const t = weightedPick(traits);
-
-  const money = b[1] + b[1]*m[1] + b[1]*t[1];
+  const money = calculateMoney(b[1], m, t);
   const jobId = crypto.randomUUID();
 
   const embed = {
     title: `${b[3]} ${b[0]} ⚡`,
     color: 16753920,
     fields:[
-      {name:"Money per second", value: formatMoney(money), inline:false},
+      {name:"Money per second", value:formatMoney(money), inline:false},
       {name:"Mutation", value:`${m[2]} ${m[0]}`, inline:true},
       {name:"Trait", value:`${t[2]} ${t[0]}`, inline:true},
-      {name:"Job id", value: jobId, inline:false},
+      {name:"Job id", value:jobId, inline:false},
       {name:"Join link", value:`[Click to Join](https://phongytb.github.io/Phonghub-joiner/?placeId=109983668079237&gameInstanceId=${jobId})`, inline:false},
       {name:"Time", value:getTimeNow(), inline:false}
     ]
   };
 
-  fetch(webhookInput.value,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({embeds:[embed]})})
-  .then(()=> logDiv.innerHTML += `[${getTimeNow()}] Sent ${b[0]} ${formatMoney(money)}<br>`)
-  .catch(e=> logDiv.innerHTML += `[${getTimeNow()}] ERROR: ${e}<br>`);
+  fetch(webhookInput.value,{
+    method:"POST",
+    headers:{"Content-Type":"application/json"},
+    body:JSON.stringify({embeds:[embed]})
+  }).then(()=> logDiv.innerHTML += `[${getTimeNow()}] Sent ${b[0]} ${formatMoney(money)}<br>`)
+    .catch(e=> logDiv.innerHTML += `[${getTimeNow()}] ERROR: ${e}<br>`);
 }
 
 // -------------------- TIMER --------------------
@@ -168,156 +167,11 @@ function startBot(){
     }
   },1000);
 }
-
 function stopBot(){ clearInterval(intervalId); intervalId=null; timerDiv.textContent="Stopped"; }
 
 startBtn.onclick=startBot;
 stopBtn.onclick=stopBot;
 sendNowBtn.onclick=()=>{sendBrainrot(); countdown=Math.floor(Math.random()*180)+60;}
-
 </script>
-</body>
-</html>["To To To Sahur", 2_200_000, 0.08, "🍛"],
-["Pot hotpot", 2_500_000, 0.08, "⚡"],
-["Pirulitoita Bicicleteira", 2_500_000, 0.08, "🍭"],
-["Horegni Boom", 2_700_000, 0.08, "💥"],
-["Quesadilla Cocodrillo", 3_000_000, 0.08, "🦎"],
-["Pot Pumpkin", 3_000_000, 0.08, "🎃"],
-["Chicleteira Bicicleteira", 3_500_000, 0.08, "🍬"],
-["Quesadillo Vampiro", 3_500_000, 0.08, "🧛‍♂️"],
-["Burrito Bandito", 4_000_000, 0.08, "🌯"],
-["Chicleteirina Bicicleteirina", 4_000_000, 0.08, "🍬"],
-["Noo my Candy", 5_000_000, 0.08, "🍭"],
-["Los Noo My Hotspotitos", 5_500_000, 0.08, "🔥"],
-["La Grande Combinasion", 10_000_000, 0.08, "🥘"],
-["Nuclearo Dinossauro", 15_000_000, 0.02, "🦖"],
-["Chicleteira Noelteira", 15_000_000, 0.02, "🍬"],
-["Los Combinasionas", 15_000_000, 0.02, "🥘"],
-["Las Sis", 17_500_000, 0.02, "👯‍♀️"],
-["Chillin Chill", 25_000_000, 0.02, "❄️"],
-["Los Puggles", 30_000_000, 0.02, "🐶"],
-["Los Primos", 31_000_000, 0.02, "👬"],
-["Eviledon", 31_500_000, 0.02, "👹"],
-["Tang Tang Keletang", 33_500_000, 0.02, "🔔"],
-["Ketupat Kepat", 35_000_000, 0.02, "🍚"],
-["La Supreme Combinasion", 40_000_000, 0.02, "🥇"],
-["Garama and Madundung", 50_000_000, 0.02, "🎭"],
-["Spaghetti Tualetti", 60_000_000, 0.02, "🍝"],
-["Los Spaghettis", 70_000_000, 0.02, "🍝"],
-["La Casa Boo", 100_000_000, 0.02, "👻"],
-["La Secret Combinasion", 125_000_000, 0.02, "🔐"],
-["Burguro and Fryuro", 150_000_000, 0.02, "🍔"],
-["Capitano Moby", 160_000_000, 0.02, "⚓"],
-["Headless Horseman", 175_000_000, 0.02, "🎃"],
-["Dragon Cannelloni", 250_000_000, 0.01, "🐉"],
-["Dragon Gingerini", 300_000_000, 0.01, "🐲"],
-["Meow OG", 450_000_000, 0.001, "😺"],
-["Strawberry Elephant OG", 550_000_000, 0.001, "🐘"],
-["Mariachi Corazoni", 12_500_000, 0.02, "🎺"],
-["Los Chicleteiras", 7_000_000, 0.02, "🍬"],
-["Lavadorito Spinto", 45_000_000, 0.02, "💦"],
-["Fragama and Chocrama", 100_000_000, 0.02, "🍫"]
-];
-
-// Mutation đầy đủ với icon
-const mutations = [
-["Default", 1, "⚪"],["Gold", 1.25, "🥇"],["Diamond", 1.5,"💎"],["Bloodrot",2,"🩸"],
-["Candy",4,"🍬"],["Lava",6,"🌋"],["Galaxy",7,"🌌"],["Yin Yang",7.5,"☯️"],
-["Radioactive",8.5,"☢️"],["Cursed",9,"👿"],["Rainbow",10,"🌈"]
-];
-
-// Trait đầy đủ với icon
-const traits = [
-["Strawberry",8,"🍓"],["Meowl",7,"🐱"],["Fireworks",6,"🎆"],["Nyan",6,"🌈"],
-["Fire",6,"🔥"],["Mygame43",6,"🎮"],["Reindeer",6,"🦌"],["Paint",6,"🎨"],
-["Indonesia Flag",5,"🇮🇩"],["Sombrero",5,"🎩"],["Zombie",5,"🧟"],["Glitched",5,"🖤"],
-["Claws",5,"🪓"],["Tie",4.75,"👔"],["UFO",3,"🛸"],["Rain",2.5,"🌧️"],
-["Extinct",4,"🦖"],["Bubblegum",4,"🍬"],["Explosive",4,"💣"],["Galactic",4,"🌌"],
-["26",6,"2️⃣6️⃣"],["R.I.P.",5,"⚰️"],["Santa Hat",5,"🎅"],["Skibidi",6.5,"🕺"]
-];
-
-// -------------------- UTILS --------------------
-function weightedPick(data) {
-return data[Math.floor(Math.random() * data.length)]; // đơn giản, có thể thêm weight
-}
-
-function formatMoney(value) {
-if (value>=1_000_000_000) return (value/1_000_000_000).toFixed(1)+'b/s';
-if (value>=1_000_000) return (value/1_000_000).toFixed(1)+'m/s';
-if (value>=1_000) return (value/1_000).toFixed(1)+'k/s';
-return value+'/s';
-}
-
-// -------------------- MAIN --------------------
-let interval = null;
-let countdown = 0;
-
-function log(msg) {
-const l = document.getElementById("log");
-l.innerHTML += msg + "<br>";
-l.scrollTop = l.scrollHeight;
-}
-
-function sendEmbed() {
-const webhook = document.getElementById("webhook").value;
-if(!webhook) return alert("Enter Webhook!");
-
-const brainrot = weightedPick(brainrots);
-const mutation = weightedPick(mutations);
-const trait = weightedPick(traits);
-
-const base = brainrot[1];
-const money = base + base*mutation[1] + base*trait[1];
-
-const jobId = crypto.randomUUID();
-
-const embed = {
-embeds:[{
-title:`${brainrot[3]} ${brainrot[0]} ⚡`,
-color:16753920,
-fields:[
-{name:"Money per second", value:formatMoney(money), inline:false},
-{name:"Mutation", value:`${mutation[2]} ${mutation[0]}`, inline:true},
-{name:"Trait", value:`${trait[2]} ${trait[0]}`, inline:true},
-{name:"Job id", value:jobId, inline:false},
-{name:"Join link", value:`[Click to Join](https://phongytb.github.io/Phonghub-joiner/?placeId=109983668079237&gameInstanceId=${jobId})`, inline:false}
-],
-footer:{text:`Sent at ${new Date().toLocaleTimeString()}`}
-}]
-};
-
-fetch(webhook, {method:"POST", headers:{"Content-Type":"application/json"}, body:JSON.stringify(embed)})
-.then(()=>log(`Sent ${brainrot[0]} (${formatMoney(money)})`))
-.catch(e=>log("Error sending webhook: "+e));
-}
-
-// -------------------- TIMER --------------------
-function startBot() {
-if(interval) return;
-countdown = Math.floor(Math.random()*181)+60; // 60-240s
-interval = setInterval(()=>{
-countdown--;
-document.getElementById("timer").innerText = `Next send in: ${countdown}s`;
-if(countdown<=0){
-sendEmbed();
-countdown = Math.floor(Math.random()*181)+60;
-}
-},1000);
-log("Bot started");
-}
-
-function stopBot() {
-if(interval) clearInterval(interval);
-interval=null;
-document.getElementById("timer").innerText = "Stopped";
-log("Bot stopped");
-}
-
-// -------------------- BUTTONS --------------------
-document.getElementById("startBtn").onclick=startBot;
-document.getElementById("stopBtn").onclick=stopBot;
-document.getElementById("sendNowBtn").onclick=sendEmbed;
-</script>
-
 </body>
 </html>
